--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
     "enes",
     "enterurusername",
     "farat",
+    "firebaseapp",
+    "firebasestorage",
     "Flamengo",
     "flashdesigma",
     "fravry",
@@ -82,6 +84,7 @@
     "nemanjaradonjic",
     "nemist",
     "nika",
+    "nobit",
     "nothala",
     "oliv",
     "olythra",
