--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "Atletico",
     "aurorarogu",
     "baka",
+    "bearthebear",
     "benali",
     "Benfica",
     "bgdnx",
@@ -55,6 +56,7 @@
     "imbebeq",
     "itsjustme",
     "jameswonson",
+    "jimy",
     "justasans",
     "Juventus",
     "kaixira",
@@ -97,6 +99,7 @@
     "pene",
     "raavenn",
     "raiderzz",
+    "ralox",
     "rayan",
     "rayanito",
     "retroknight",
@@ -106,9 +109,12 @@
     "rmnhu",
     "sanxrt",
     "sanyan",
+    "seattlesounders",
+    "shielin",
     "softerdoge",
     "spainbreakinq",
     "spanishbreakinq",
+    "speedyspeedyboy",
     "starplayer",
     "subtletrolling",
     "suka",
