--- a/prepros.config
+++ b/prepros.config
@@ -922,6 +922,50 @@
             }
           }
         }
+      },
+      {
+        "file": "public/assets/pug/pages/404.pug",
+        "config": {
+          "customOutput": "public/404.htm",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "public/assets/pug/pages/home.pug",
+        "config": {
+          "customOutput": "public/index.htm",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "public/assets/pug/pages/top-players.pug",
+        "config": {
+          "customOutput": "public/top-players.htm",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "public/assets/scss/main.scss",
+        "config": {
+          "customOutput": "public/assets/css/main.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
       }
     ]
   }
