--- a/prepros.config
+++ b/prepros.config
@@ -926,7 +926,7 @@
       {
         "file": "public/assets/pug/pages/404.pug",
         "config": {
-          "customOutput": "public/404.htm",
+          "customOutput": "public/404.html",
           "tasks": {
             "minify-html": {
               "enable": true
@@ -937,7 +937,7 @@
       {
         "file": "public/assets/pug/pages/home.pug",
         "config": {
-          "customOutput": "public/index.htm",
+          "customOutput": "public/index.html",
           "tasks": {
             "minify-html": {
               "enable": true
@@ -948,7 +948,7 @@
       {
         "file": "public/assets/pug/pages/top-players.pug",
         "config": {
-          "customOutput": "public/top-players.htm",
+          "customOutput": "public/top-players.html",
           "tasks": {
             "minify-html": {
               "enable": true
