--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "clubederegatasdoflamengologoquak",
     "czechrepublic",
     "dagreat",
+    "desmondbenjamin",
     "dingboisvro",
     "djaski",
     "dreds",
@@ -37,6 +38,7 @@
     "enes",
     "enterurusername",
     "farat",
+    "fehtkxz",
     "firebaseapp",
     "firebasestorage",
     "Flamengo",
@@ -66,6 +68,7 @@
     "krendyy",
     "krinkon",
     "kyli",
+    "lkai",
     "losangeles",
     "luhxenn",
     "lxcko",
