--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,17 +12,22 @@
     "asukibazooki",
     "Atletico",
     "aurorarogu",
+    "autoplace",
+    "autoprefixer",
     "baka",
     "bearthebear",
     "benali",
     "Benfica",
     "bgdnx",
+    "bloodyrevenge",
     "bocajuniorslogo",
     "bolachadelorenzo",
     "Borussia",
     "bram",
     "bratibrati",
+    "capy",
     "chopacm",
+    "classnames",
     "clubamerica",
     "clubederegatasdoflamengologoquak",
     "czechrepublic",
@@ -31,24 +36,32 @@
     "dingboisvro",
     "djaski",
     "dreds",
+    "duckdoestuffyt",
     "duckguest",
     "egotisticaldhp",
     "egzequtorr",
+    "Elems",
     "ence",
     "enes",
     "enterurusername",
     "farat",
+    "fargs",
     "fehtkxz",
     "firebaseapp",
     "firebasestorage",
     "Flamengo",
     "flashdesigma",
+    "flexbox",
+    "fnames",
     "fravry",
     "Fulmanise",
+    "funcs",
+    "funs",
     "ghostv",
     "ghostzismagik",
     "ghstvnn",
     "gnzs",
+    "haml",
     "hoelesmf",
     "ibbyjasbuiscryptic",
     "icewallowcome",
@@ -68,6 +81,8 @@
     "krendyy",
     "krinkon",
     "kyli",
+    "lexsud",
+    "linenos",
     "lkai",
     "losangeles",
     "luhxenn",
@@ -100,6 +115,7 @@
     "papaparse",
     "pavlo",
     "pene",
+    "Prepros",
     "raavenn",
     "raiderzz",
     "ralox",
@@ -119,16 +135,20 @@
     "spanishbreakinq",
     "speedyspeedyboy",
     "starplayer",
+    "styl",
     "subtletrolling",
     "suka",
     "susy",
     "szyneke",
     "tmthy",
+    "toplevel",
+    "typeofs",
     "utts",
     "verta",
     "vnirato",
     "weelzom",
     "whitepantherak",
+    "whyuhereboy",
     "xcorn",
     "xeomisgoat",
     "xonicy",
