--- a/prepros.config
+++ b/prepros.config
@@ -891,6 +891,17 @@
         }
       },
       {
+        "file": "assets/pug/pages/404.pug",
+        "config": {
+          "customOutput": "public/404.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "assets/pug/pages/home.pug",
         "config": {
           "customOutput": "pages/home.htm",
@@ -902,9 +913,9 @@
         }
       },
       {
-        "file": "assets/pug/pages/top-players.pug",
+        "file": "assets/pug/pages/index.pug",
         "config": {
-          "customOutput": "pages/top-players.htm",
+          "customOutput": "public/index.html",
           "tasks": {
             "minify-html": {
               "enable": true
@@ -913,9 +924,42 @@
         }
       },
       {
+        "file": "assets/pug/pages/top-players.pug",
+        "config": {
+          "customOutput": "public/top-players.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "assets/scss/index.scss",
+        "config": {
+          "customOutput": "public/assets/css/index.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "assets/scss/main.scss",
         "config": {
-          "customOutput": "assets/css/main.min.css",
+          "customOutput": "public/assets/css/main.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "assets/scss/top-players.scss",
+        "config": {
+          "customOutput": "public/assets/css/top-players.min.css",
           "tasks": {
             "minify-css": {
               "enable": true
