--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "alpee",
     "Ammar",
     "amzz",
+    "andi",
     "antixer",
     "ariaataveraa",
     "asadthehero",
@@ -35,6 +36,7 @@
     "desmondbenjamin",
     "dingboisvro",
     "djaski",
+    "dotenv",
     "dreds",
     "duckdoestuffyt",
     "duckguest",
@@ -44,10 +46,13 @@
     "ence",
     "enes",
     "enterurusername",
+    "eslintcache",
+    "ezeee",
     "farat",
     "fargs",
     "fehtkxz",
     "firebaseapp",
+    "firebaserc",
     "firebasestorage",
     "Flamengo",
     "flashdesigma",
@@ -72,12 +77,14 @@
     "itsjustme",
     "jameswonson",
     "jimy",
+    "jscoverage",
     "justasans",
     "Juventus",
     "kaixira",
     "kaven",
     "kennyrs",
     "kinggames",
+    "kissarielplease",
     "krendyy",
     "krinkon",
     "kyli",
@@ -103,18 +110,22 @@
     "ndbestpub",
     "nemanjaradonjic",
     "nemist",
+    "nfot",
     "nika",
     "nobit",
     "nothala",
     "oliv",
     "olythra",
     "oslovn",
+    "otukaaz",
     "palmeiras",
     "Palmeras",
     "panyatka",
     "papaparse",
     "pavlo",
+    "peakxinho",
     "pene",
+    "pids",
     "Prepros",
     "raavenn",
     "raiderzz",
@@ -142,6 +153,7 @@
     "szyneke",
     "tmthy",
     "toplevel",
+    "twizz",
     "typeofs",
     "utts",
     "verta",
@@ -149,6 +161,7 @@
     "weelzom",
     "whitepantherak",
     "whyuhereboy",
+    "wscript",
     "xcorn",
     "xeomisgoat",
     "xonicy",
@@ -157,6 +170,7 @@
     "zazuthetopg",
     "zennnn",
     "zetqa",
-    "zoara"
+    "zoara",
+    "zxzx"
   ]
 }
