--- a/prepros.config
+++ b/prepros.config
@@ -880,9 +880,59 @@
     },
     "files": [
       {
+        "file": "assets/js/index.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/index.min.js"
+        }
+      },
+      {
+        "file": "assets/js/main.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/main.min.js"
+        }
+      },
+      {
+        "file": "assets/js/rule-book.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/rule-book.min.js"
+        }
+      },
+      {
+        "file": "assets/js/top-players.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/top-players.min.js"
+        }
+      },
+      {
+        "file": "assets/pug/404.pug",
+        "config": {
+          "customOutput": "public/404.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "assets/pug/home.pug",
         "config": {
           "customOutput": "home.htm",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "assets/pug/index.pug",
+        "config": {
+          "customOutput": "public/index.html",
           "tasks": {
             "minify-html": {
               "enable": true
@@ -935,8 +985,31 @@
         }
       },
       {
+        "file": "assets/pug/rule-book.pug",
+        "config": {
+          "customOutput": "public/rule-book.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "assets/pug/top-players.pug",
+        "config": {
+          "customOutput": "public/top-players.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "assets/scss/index.scss",
         "config": {
+          "sourceMap": false,
           "customOutput": "public/assets/css/index.min.css",
           "tasks": {
             "minify-css": {
@@ -948,7 +1021,20 @@
       {
         "file": "assets/scss/main.scss",
         "config": {
+          "sourceMap": false,
           "customOutput": "public/assets/css/main.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "assets/scss/rule-book.scss",
+        "config": {
+          "sourceMap": false,
+          "customOutput": "public/assets/css/rule-book.min.css",
           "tasks": {
             "minify-css": {
               "enable": true
@@ -959,6 +1045,7 @@
       {
         "file": "assets/scss/top-players.scss",
         "config": {
+          "sourceMap": false,
           "customOutput": "public/assets/css/top-players.min.css",
           "tasks": {
             "minify-css": {
