Updated top players in 20th july

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "aurorarogu",
     "autoplace",
     "autoprefixer",
+    "axnoxd",
     "baka",
     "bearthebear",
     "benali",
@@ -27,10 +28,12 @@
     "bram",
     "bratibrati",
     "capy",
+    "casi",
     "chopacm",
     "classnames",
     "clubamerica",
     "clubederegatasdoflamengologoquak",
+    "crfl",
     "czechrepublic",
     "dagreat",
     "desmondbenjamin",
@@ -66,6 +69,7 @@
     "ghostzismagik",
     "ghstvnn",
     "gnzs",
+    "gotbannedbyafs",
     "haml",
     "hoelesmf",
     "ibbyjasbuiscryptic",
@@ -95,11 +99,13 @@
     "luhxenn",
     "lxcko",
     "lyricalzo",
+    "malfini",
     "mamelodisundowns",
     "mannyzinho",
     "marczzezclap",
     "masqked",
     "megissss",
+    "meng",
     "mikeyogballer",
     "miroslav",
     "mohememd",
@@ -111,9 +117,11 @@
     "nemanjaradonjic",
     "nemist",
     "nfot",
+    "nicolasjr",
     "nika",
     "nobit",
     "nothala",
+    "notneal",
     "oliv",
     "olythra",
     "oslovn",
@@ -159,12 +167,16 @@
     "verta",
     "vnirato",
     "weelzom",
+    "whech",
     "whitepantherak",
     "whyuhereboy",
     "wscript",
+    "wydadfc",
     "xcorn",
+    "xdarkjuanx",
     "xeomisgoat",
     "xonicy",
+    "xsabox",
     "xsolidwolf",
     "xvmichelvx",
     "zazuthetopg",
