--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "achrafhakimi",
     "Ahly",
     "alahly",
+    "algerianfrezzer",
     "alpee",
     "Ammar",
     "amzz",
@@ -24,9 +25,11 @@
     "bloodyrevenge",
     "bocajuniorslogo",
     "bolachadelorenzo",
+    "bomboclauut",
     "Borussia",
     "bram",
     "bratibrati",
+    "cabiidee",
     "capy",
     "casi",
     "chopacm",
@@ -71,6 +74,7 @@
     "gnzs",
     "gotbannedbyafs",
     "haml",
+    "heroisbanned",
     "hoelesmf",
     "ibbyjasbuiscryptic",
     "icewallowcome",
@@ -78,8 +82,10 @@
     "idontgetlocked",
     "igcx",
     "imbebeq",
+    "islayer",
     "itsjustme",
     "jameswonson",
+    "janasto",
     "jimy",
     "jscoverage",
     "justasans",
@@ -140,11 +146,13 @@
     "ralox",
     "rayan",
     "rayanito",
+    "reszut",
     "retroknight",
     "riadis",
     "riosnhfk",
     "rizzyanot",
     "rmnhu",
+    "roosvanfleur",
     "sanxrt",
     "sanyan",
     "seattlesounders",
@@ -170,6 +178,7 @@
     "whech",
     "whitepantherak",
     "whyuhereboy",
+    "wlirt",
     "wscript",
     "wydadfc",
     "xcorn",
