--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
   "hosting": {
     "public": "public",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "cleanUrls": true,
     "headers": [
       {
         "source": "**/*.js",
@@ -76,14 +77,11 @@
         ]
       }
     ],
-    "rewrites": [
+    "redirects": [
       {
-        "source": "/rule-book",
-        "destination": "/rule-book.html"
-      },
-      {
-        "source": "/top-players",
-        "destination": "/top-players.html"
+        "source": "/:file.html",
+        "destination": "/:file",
+        "type": 301
       }
     ]
   }
