updating the top players

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
     "crfl",
     "czechrepublic",
     "dagreat",
+    "dayoff",
     "desmondbenjamin",
     "dingboisvro",
     "djaski",
@@ -156,6 +157,7 @@
     "roosvanfleur",
     "sanxrt",
     "sanyan",
+    "scapthecobra",
     "seattlesounders",
     "shielin",
     "softerdoge",
@@ -163,6 +165,7 @@
     "spanishbreakinq",
     "speedyspeedyboy",
     "starplayer",
+    "stxr",
     "styl",
     "subtletrolling",
     "suka",
