--- a/prepros.config
+++ b/prepros.config
@@ -341,17 +341,6 @@
         "keep_fnames": false,
         "safari10": false
       },
-      "node-sass": {
-        "indentType": "space",
-        "allowWildcardImports": false,
-        "indentWidth": 2,
-        "linefeed": "lf",
-        "outputStyle": "expanded",
-        "precision": 10,
-        "sourceMap": false,
-        "removeCharset": false,
-        "sourceComments": false
-      },
       "png": {
         "quality": 90
       },
@@ -429,6 +418,17 @@
       },
       "turf": {
         "rootDir": ""
+      },
+      "node-sass": {
+        "indentType": "space",
+        "allowWildcardImports": false,
+        "indentWidth": 2,
+        "linefeed": "lf",
+        "outputStyle": "expanded",
+        "precision": 10,
+        "sourceMap": false,
+        "removeCharset": false,
+        "sourceComments": false
       }
     },
     "fileTypes": {
@@ -1055,6 +1055,102 @@
         }
       },
       {
+        "file": "client/src/js/index.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "client/public/assets/js/index.min.js"
+        }
+      },
+      {
+        "file": "client/src/js/main.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "client/public/assets/js/main.min.js"
+        }
+      },
+      {
+        "file": "client/src/js/rule-book.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "client/public/assets/js/rule-book.min.js"
+        }
+      },
+      {
+        "file": "client/src/js/top-players.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "client/public/assets/js/top-players.min.js"
+        }
+      },
+      {
+        "file": "client/src/pug/404.pug",
+        "config": {
+          "customOutput": "client/public/404.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "client/src/pug/index.pug",
+        "config": {
+          "customOutput": "client/public/index.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "client/src/pug/rule-book.pug",
+        "config": {
+          "customOutput": "client/public/rule-book.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "client/src/pug/top-players.pug",
+        "config": {
+          "customOutput": "client/public/top-players.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "client/src/scss/index.scss",
+        "config": {
+          "sourceMap": false,
+          "customOutput": "client/public/assets/css/index.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "client/src/scss/main.scss",
+        "config": {
+          "sourceMap": false,
+          "customOutput": "client/public/assets/css/main.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "public/assets/pug/pages/404.pug",
         "config": {
           "customOutput": "public/404.html",
@@ -1090,6 +1186,102 @@
       {
         "file": "public/assets/scss/main.scss",
         "config": {
+          "customOutput": "public/assets/css/main.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/js/index.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/index.min.js"
+        }
+      },
+      {
+        "file": "src/js/main.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/main.min.js"
+        }
+      },
+      {
+        "file": "src/js/rule-book.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/rule-book.min.js"
+        }
+      },
+      {
+        "file": "src/js/top-players.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "public/assets/js/top-players.min.js"
+        }
+      },
+      {
+        "file": "src/pug/404.pug",
+        "config": {
+          "customOutput": "public/404.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/pug/index.pug",
+        "config": {
+          "customOutput": "public/index.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/pug/rule-book.pug",
+        "config": {
+          "customOutput": "public/rule-book.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/pug/top-players.pug",
+        "config": {
+          "customOutput": "public/top-players.html",
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/scss/index.scss",
+        "config": {
+          "sourceMap": false,
+          "customOutput": "public/assets/css/index.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "src/scss/main.scss",
+        "config": {
+          "sourceMap": false,
           "customOutput": "public/assets/css/main.min.css",
           "tasks": {
             "minify-css": {
