--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spl",
-  "version": "1.3.1",
+  "name": "spl-server",
+  "version": "1.0.0",
   "description": "",
   "homepage": "https://github.com/AmmarWebDev/SPL#readme",
   "bugs": {
@@ -15,11 +15,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "cors": "^2.8.5",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
