--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,32 @@
 {
   "cSpell.words": [
     "Ammar",
+    "autopass",
     "autoprefixer",
     "classnames",
     "cleansheets",
     "Elems",
     "fargs",
+    "firebaseapp",
+    "firebasestorage",
     "fnames",
+    "freekick",
     "funcs",
     "funs",
     "haml",
+    "laquo",
     "linenos",
     "MOTM",
+    "Nasr",
+    "nobit",
     "Prepros",
+    "raquo",
     "Replit",
     "styl",
+    "stylesheet",
     "toplevel",
     "typeofs",
+    "YALL",
     "yessir"
   ]
 }
